Atualiza .gitignore para ignorar arquivo .db e ajusta target clean do Makefile para remover o banco

--- a/back/Makefile
+++ b/back/Makefile
@@ -93,6 +93,7 @@ clean:
 	$(RM) htmlcov
 	$(RM) site
 	$(RM) .coverage
+	$(RM) data/*.db
 
 ifeq ($(OS),Windows_NT)
 	@echo "Removendo __pycache__ recursivamente."
