Refatora UserRepository: documentação aprimorada, organização interna padronizada e melhorias de legibilidade sem alterações de comportamento

--- a/back/Makefile
+++ b/back/Makefile
@@ -46,7 +46,7 @@ lint: install
 # Testes
 test: install
 	@echo "Executando testes."
-	$(VENV)/bin/pytest -q
+	$(VENV)/bin/pytest
 
 coverage: install
 	@echo "Executando cobertura de testes."
