feat(user): refatora módulo de usuários e autenticação; adiciona CRUD completo, DTOs tipados, serviços revisados, endpoints FastAPI e testes abrangentes

--- a/back/Makefile
+++ b/back/Makefile
@@ -46,7 +46,7 @@ lint: install
 # Testes
 test: install
 	@echo "Executando testes."
-	$(VENV)/bin/pytest
+	$(VENV)/bin/pytest -q
 
 coverage: install
 	@echo "Executando cobertura de testes."
