--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,5 +1,12 @@
 FROM python:3.12-slim
+
+# Install Sqlite
+RUN apt-get -y update && apt-get -y upgrade && apt-get install -y sqlite3 libsqlite3-dev && apt-get clean
+
 WORKDIR /app
+
+# Create database
+RUN mkdir ./data && /usr/bin/sqlite3 ./data/database.db
 
 COPY ./back/requirements.txt /app
 
